tests/snapshots/edit__list@flake_true.snap
---
source: tests/edit.rs
expression: "ListOutput::from(flake_edit.curr_list())"
info:
  flake_nix: ""
  changes: []
---
inputs:
  flake-compat:
    id: flake-compat
    url: "github:edolstra/flake-compat"
    flake: true
  naersk:
    id: naersk
    url: "github:nix-community/naersk/master"
    flake: true
  nixpkgs:
    id: nixpkgs
    url: "github:NixOS/nixpkgs/nixpkgs-unstable"
    flake: true
  utils:
    id: utils
    url: "github:numtide/flake-utils"
    flake: true
follows:
  - parent: naersk
    nested: nixpkgs
    target: nixpkgs
    kind: indirect
