tests/snapshots/edit__list@naersk.snap
---
source: tests/edit.rs
expression: "ListOutput::from(flake_edit.list())"
info:
  flake_nix: ""
  changes:
    - Remove:
        ids:
          - naersk
---
inputs:
  flake-compat:
    id: flake-compat
    url: "github:edolstra/flake-compat"
    flake: true
  nixpkgs:
    id: nixpkgs
    url: "github:NixOS/nixpkgs/nixpkgs-unstable"
    flake: true
  utils:
    id: utils
    url: "github:numtide/flake-utils"
    flake: true
follows: []
