tests/snapshots/edit__list@utils.snap
---
source: tests/edit.rs
expression: "ListOutput::from(flake_edit.list())"
info:
  flake_nix: ""
  changes:
    - Remove:
        ids:
          - utils
---
inputs:
  flake-compat:
    id: flake-compat
    url: "github:edolstra/flake-compat"
    flake: true
  naersk:
    id: naersk
    url: "github:nix-community/naersk/master"
    flake: true
  nixpkgs:
    id: nixpkgs
    url: "github:NixOS/nixpkgs/nixpkgs-unstable"
    flake: true
follows:
  - parent: naersk
    nested: nixpkgs
    target: nixpkgs
    kind: indirect
