tests/snapshots/edit__one_level_nesting_flat.snap
---
source: tests/edit.rs
expression: walker.inputs
info:
  flake_nix: ""
  changes: []
---
crane:
  id: crane
  flake: true
  url: "\"github:ipetkov/crane\""
  follows:
    - Indirect:
        - flake-utils
        - "\"flake-utils\""
    - Indirect:
        - nixpkgs
        - "\"nixpkgs\""
    - Indirect:
        - rust-overlay
        - "\"rust-overlay\""
flake-utelinos:
  id: flake-utelinos
  flake: true
  url: "\"github:numtide/flake-utils\""
  follows: []
nixpkgs:
  id: nixpkgs
  flake: true
  url: "\"github:nixos/nixpkgs/nixos-unstable\""
  follows: []
rust-overlay:
  id: rust-overlay
  flake: true
  url: "\"github:oxalica/rust-overlay\""
  follows:
    - Indirect:
        - flake-utils
        - "\"flake-utils\""
    - Indirect:
        - nixpkgs
        - "\"nixpkgs\""

