tests/snapshots/edit__remove_input@flat_nested_flat_poetry2nix.snap
---
source: tests/edit.rs
expression: result
info:
  flake_nix: ""
  changes:
    - Remove:
        id: poetry2nix
---
{
  description = "flat nested flat test";

  inputs.nixpkgs.url = "github:NixOS/nixpkgs/nixos-unstable";
  inputs.flake-utils.url = "github:numtide/flake-utils/master";

  outputs =
    {
      self,
      nixpkgs,
      flake-utils,
    }:
    { };
}
