tests/snapshots/edit__remove_input@follows_only_nested_sizelint.snap
---
source: tests/edit.rs
expression: result
info:
  flake_nix: ""
  changes:
    - Remove:
        ids:
          - sizelint
---
{
  description = "Test flake with follows-only inputs in nested block";

  inputs = {
    nixpkgs.url = "github:nixos/nixpkgs/nixos-unstable";
    harmonia.url = "github:nix-community/harmonia";
    treefmt-nix.follows = "harmonia/treefmt-nix";
  };

  outputs = _: { };
}
